// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Live tail button change live tail to 10s interval 1`] = `
<body>
  <div>
    <button
      class="euiButton euiButton--primary euiButton--small"
      data-test-subj=""
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <svg
          aria-hidden="true"
          class="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
          focusable="false"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 2h8a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2Zm0 1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1H4Z"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="euiButton__text"
        >
          10s
        </span>
      </span>
    </button>
  </div>
</body>
`;

exports[`Live tail button starts live tail with 5s interval 1`] = `
<body>
  <div>
    <button
      class="euiButton euiButton--primary euiButton--small"
      data-test-subj=""
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <svg
          aria-hidden="true"
          class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
          focusable="false"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
          />
        </svg>
        <span
          class="euiButton__text"
        >
          5s
        </span>
      </span>
    </button>
  </div>
</body>
`;

exports[`Live tail off button stop live tail 1`] = `
<body>
  <div>
    <button
      class="euiButton euiButton--danger euiButton--small"
      data-test-subj=""
      type="button"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <svg
          aria-hidden="true"
          class="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
          focusable="false"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 2h8a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2Zm0 1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1H4Z"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="euiButton__text"
        >
          Stop
        </span>
      </span>
    </button>
  </div>
</body>
`;
